--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>jerry</groupId>
-  <artifactId>yzhp</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>youzan-helper</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>sph Maven Webapp</name>
+  <packaging>jar</packaging>
+
+  <name>youzan-helper</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
-      <groupId>org.jodd</groupId>
-      <artifactId>jodd-all</artifactId>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>youzan-helper</finalName>
-  </build>
 </project>
